--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
+    "openai": "^4.90.0",
     "prisma": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
