--- a/package.json
+++ b/package.json
@@ -5,21 +5,29 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@auth0/nextjs-auth0": "^2.2.0",
-    "@uploadthing/react": "^5.0.0",
+    "@auth0/nextjs-auth0": "^2.4.0",
+    "@uploadthing/react": "^5.2.1",
+    "@uploadthing/react/hooks": "^5.2.1",
+    "@supabase/supabase-js": "^2.38.0",
     "lucide-react": "^0.268.0",
     "recorder-js": "^1.0.3",
-    "@supabase/supabase-js": "^2.38.0",
     "formidable": "^3.5.0",
-    "openai": "^4.0.0"
+    "openai": "^4.15.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "@types/node": "^20.5.9",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.15"
   }
 }
