--- a/package.json
+++ b/package.json
@@ -9,24 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.4.0",
+    "@auth0/nextjs-auth0": "^4.4.1",
+    "@supabase/supabase-js": "^2.38.0",
+    "@uploadthing/react": "^5.2.1",
+    "formidable": "^3.5.0",
+    "lucide-react": "^0.268.0",
+    "next": "^15.2.4",
+    "next-pwa": "^5.6.0",
+    "openai": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@auth0/nextjs-auth0": "^2.4.0",
-    "@uploadthing/react": "^5.2.1",
-    "@supabase/supabase-js": "^2.38.0",
-    "lucide-react": "^0.268.0",
-    "recorder-js": "^1.0.3",
-    "formidable": "^3.5.0",
-    "openai": "^4.15.0"
+    "recorder-js": "^1.0.3"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
     "@types/node": "^20.5.9",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "tailwindcss": "^3.4.1",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "autoprefixer": "^10.4.15",
     "postcss": "^8.4.24",
-    "autoprefixer": "^10.4.15"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.0"
+  },
+  "compilerOptions": {
+    "jsx": "preserve"
   }
 }
