--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^4.4.1",
+    "@auth0/nextjs-auth0": "^2.7.0",
     "@supabase/supabase-js": "^2.38.0",
     "@uploadthing/react": "^5.2.1",
     "formidable": "^3.5.0",
@@ -22,6 +22,7 @@
     "recorder-js": "^1.0.3"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.5.9",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
