--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.7.0",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
     "@supabase/supabase-js": "^2.38.0",
     "@uploadthing/react": "^5.2.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "formidable": "^3.5.0",
     "lucide-react": "^0.268.0",
     "next": "^15.2.4",
@@ -19,16 +24,18 @@
     "openai": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recorder-js": "^1.0.3"
+    "recorder-js": "^1.0.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
     "@types/node": "^20.5.9",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "compilerOptions": {
