--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "react-dom": "^18.2.0",
     "recorder-js": "^1.0.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
     "@types/node": "^20.5.9",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
