--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.268.0",
     "next": "^15.2.4",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "openai": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
