--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,10 +2,12 @@
   "name": "Growlog.AI",
   "short_name": "Growlog",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "portrait",
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "/icon-192.png",
