--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@supabase/supabase-js": "^2.38.0",
     "@uploadthing/react": "^5.2.1",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formidable": "^3.5.0",
