--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.2",
     "formidable": "^2.1.0",
     "lucide-react": "^0.268.0",
     "next": "^15.2.4",
